<resources>
    <string name="app_name">Te Ajudo</string>
    <string name="requestPermission">Para utilizar o Te Ajude precisamos da permissão para utilizar a localização do seu celular.</string>
    <string name="requestPermissionLocation">Agora necessitamos que habilite a localização do seu device. Nessa tela você será redirecionado para tela de configurações do seu aparelho.</string>
    <string name="allowPermissions">Conceder Permissões</string>
    <string name="allowLocations">Habilitar Localização</string>
    <string name="maps_tab">Mapa</string>
    <string name="requests_tab">Pedidos</string>
    <string name="volunteers_tab">Voluntários</string>
    <string name="local_business_tab">Negócios</string>
    <string name="name_title">Voluntário(a)</string>
    <string name="contact_with_title">Fale comigo por</string>
    <string name="email_button">E-mail</string>
    <string name="phone_button">Telefone</string>
    <string name="whatsapp_button">Whatsapp</string>
    <string name="shopping_title">Compras</string>
    <string name="food_title">Alimentação</string>
    <string name="farmacy_title">Farmácia</string>
    <string name="enable_conversation">Posso conversar</string>
    <string name="enable_dog">Passear com o dog</string>
    <string name="enable_delivery">Fazemos entregas</string>
    <string name="help_user_title">Posso ajudar como?</string>
    <string name="email_subject">Te ajudo contato</string>
    <string name="email_body">"Olá \n Gostaria de entrar em contato com você...</string>
    <string name="email_chooser_title">Enviar email</string>

    <string name="volunteers_title">Voluntário(a)</string>
    <string name="local_business_title">Pequeno Negócio</string>
    <string name="user_title">Solicitante</string>
    <string name="type_not_found">Não definido</string>

</resources>
